oauth2-proxy-keycloak/alpha-sample/manifests/sample.yaml
apiVersion: v1
kind: Service
metadata:
  labels: #@ labels()
  name: sample
  namespace: #@ namespace()
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector: #@ labels()
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: #@ labels()
  name: sample
  namespace: #@ namespace()
spec:
  replicas: 1
  selector:
    matchLabels: #@ labels()
  template:
    metadata:
      labels: #@ labels()
    spec:
      serviceAccountName: sample-sa
      containers:
        - name: sample
          image: sample-image
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 100
        - name: oauth2-proxy
          image: oauth2-proxy
          imagePullPolicy: Always
          args:
            - --alpha-config=/etc/oauth2_proxy_alpha/oauth2_proxy.yaml
            - --config=/etc/oauth2_proxy/oauth2_proxy.yaml
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
            successThreshold: 1
            periodSeconds: 10
          resources: {}
          volumeMounts:
            - mountPath: /etc/oauth2_proxy_alpha
              name: alphaconfig
            - mountPath: /etc/oauth2_proxy
              name: proxyconfig
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 1001
            runAsGroup: 1001
      volumes:
        - configMap:
            defaultMode: 420
            name: alpha-config
          name: alphaconfig
        - configMap:
            defaultMode: 420
            name: #@ config()
          name: proxyconfig
      tolerations: []
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sample
  labels: #@ labels()
  namespace: #@ namespace()
spec:
  virtualhost:
    fqdn: #@ data.values.fqdn
  routes:
    - services:
        - name: sample
          port: 80
